--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -70,7 +70,7 @@ these component elements in a normative manner, including but not limited to oth
 standards, implementations of the conformance test suite, or certificates of
 conformance for implementations conformant to the standard in question.#* The precise
 enforcement of this requirement and its associated recommendation is the purview of
-the OGC Naming Authority or its equivalence.
+the OGC Naming Authority or its equivalents.
 
 While a requirement may be referenced in more than one place in a standard, the normative definition of a requirement shall be its "*#home#*" (see <<cls-5-3>>) and
 will be the only place where full normative language is used.
