--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -38,7 +38,7 @@ language.{blank}footnote:[In this standard, in informative sections, the word "w
 implies that something is an implication of a requirement. The "will" statements are
 not requirements, but explain the consequence of requirements.]
 
-A UML representation of important properties of this model is given in <<annex-B-2>>.
+A UML representation of important properties of this model is given in <<annex-C-2>>.
 
 This Policy defines a "requirement" of a standard as an atomic testable
 criterion. See the formal definition of requirement in <<term-requirement>>
