--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -4,27 +4,29 @@
 [[cls-6-1]]
 === The model
 
-This Policy defines requirements for specifying the structure as organized sets of
+The ModSpec defines requirements for specifying the structure as organized sets of
 criteria, those that are to be tested ("requirements") and those that are not tested
 ("recommendations" and "permissions"). All OGC Standards, formally or informally, create an
 abstraction of the things to which they apply (called an "abstract model") in order to provide a context for stating
 requirements.
 
-This Policy assumes that OGC Standards documents are in a commonly used
-logical form (template). This form can be specified by the following descriptions:
+NOTE: For OGC Standards, the assumptions is that documents are in a commonly used
+logical form (template). 
 
-. A standards document or abstract specification document contains Clauses (corresponding to numbered sections as they might
+This form should be specified by the following descriptions:
+
+. A standards document contains Clauses (corresponding to numbered sections as they might
 appear in a table of contents) which describe its standardization target and its requirements.
 . An OGC Standard or Abstract Specification contains Annexes or is associated to other documents (both a
 logical type of Clause), one of which is the Conformance Test Suite (which may be an
 abstract description of the test suites to be implemented separately). In OGC Documents, this is Annex A – Abstract Test Suite.
-. All requirements, recommendations, permissions and models are introduced and defined first in
+. All requirements, recommendations, permissions, and models are introduced and defined first in
 the numbered Clauses.
 . All requirements are identifiable as requirements. In OGC and ISO, this means use
 of "normative" language, meaning the proper use of SHALL, SHOULD, CAN and MAY or
 similar wording in the passive voice. All requirements in a document are uniquely numbered.
 . All tests for conformance to those requirements are defined in the Conformance Test
-Suite (also known as the Abstract Test Suite (ATS) in OGC documents).
+Suite.  Is OGC Standards documents, this is the Abstract Test Suite (ATS).
 . Tests are be grouped for convenience into conformance test classes and if desired the classes are grouped into conformance test modules.
 . The tests, if conducted, determine to some degree of certainty whether an
 implementation meets the requirements which the tests reference.
@@ -32,7 +34,7 @@ implementation meets the requirements which the tests reference.
 does not do this, it is has by default only one "conformance class".
 . Certificates of conformance (see <<term-all-components-schema-document>>) are
 awarded by a testing entity based on these conformance classes.
-. There is a clear distinction between normative and. informative parts of the text.
+. There is a clear distinction between normative and informative parts of the text.
 . Examples and notes are informative, and do not use "normative"
 language.{blank}footnote:[In this standard, in informative sections, the word "will"
 implies that something is an implication of a requirement. The "will" statements are
@@ -40,13 +42,13 @@ not requirements, but explain the consequence of requirements.]
 
 A UML representation of important properties of this model is given in <<annex-B-2>>.
 
-This Policy defines a "requirement" of a standard as an atomic testable
+The ModSpec defines a "requirement" of a standard as an atomic testable
 criterion. See the formal definition of requirement in <<term-requirement>>
 
 [[req-1]]
 [requirement,model=ogc,type="general"]
 ====
-#All the parts of a requirement, a requirement module or requirements class shall be
+#All the parts of a requirement, a requirement module, or requirements class SHALL be
 testable. Failure to pass any part of any requirement shall be a failure to pass the
 associated conformance test class.#
 ====
@@ -62,14 +64,16 @@ failure to pass the requirement.
 ====
 #Each component of the standard, including requirements, requirements modules,
 requirements classes, conformance test cases, conformance modules and conformance
-classes shall be assigned a URI conformant with the OGC naming authority policies.#
+classes SHALL be assigned a URI. 
+For OGC stadnrds documents, these URIs SHALL be conformant with the OGC naming authority policies.#
 ====
 
 *#These URI identities should be used in any external documentation that reference
 these component elements in a normative manner, including but not limited to other
 standards, implementations of the conformance test suite, or certificates of
-conformance for implementations conformant to the standard in question.#* The precise
-enforcement of this requirement and its associated recommendation is the purview of
+conformance for implementations conformant to the standard in question.#* 
+
+NOTE: In the OGC, The precise the enforcement of this requirement and its associated recommendation is the purview of
 the OGC Naming Authority or its equivalents.
 
 While a requirement may be referenced in more than one place in a standard, the normative definition of a requirement shall be its "*#home#*" (see <<cls-5-3>>) and
@@ -79,25 +83,26 @@ In the conformance test suite there will be a test defined to verify the validit
 the claim that an implementation of the standard (standardization target) satisfies
 each requirement. Since the normative language of the body of the standard and the
 conformance test classes both define what conformance to the standard means, they
-will be equivalent in a well-written specification. This Policy requires
-OGC Standards and Abstract Specifications to be well-written, at least in stating requirements and conformance
+will be equivalent in a well-written specification.The ModSpec requires
+a standards document to be well-written, at least in stating requirements and conformance
 tests.
 
 Conformance tests are aggregated into conformance classes that specify how certain
 "certificates of conformance" are achieved. The natural inclination is to aggregate
 the requirements. The issue that blocks this approach is that some requirements are
 optional while others are mandatory. To achieve a cleaner separation of requirements,
-this Policy separates them into sets (called "requirements classes"), each of which
-has no optional components. Since the normative statement of each requirement is only declared once and is uniquely identified as such, each requirement will be in a clause associated to its requirements class.
+the ModSpec separates them into sets (called "requirements classes"), each of which
+has no optional components. Since the normative statement of each requirement is only 
+declared once and is uniquely identified as such, each requirement will be in a clause associated to its requirements class.
 
-Therefore, this Policy defines a "requirements class" as a set of requirements that must
+Therefore, the ModSpec defines a "requirements class" as a set of requirements that must
 all be passed to achieve a particular conformance class (see
-<<term-conformance-test-class>>). This Policy also includes a "middle" structure
-called a conformance test module, this Policy also includes requirements modules to
-parallel the conformance test modules. A standard written to this Policy may
+<<term-conformance-test-class>>). This document also includes a "middle" structure
+called a conformance test module, this document also includes requirements modules to
+parallel the conformance test modules. A standard written to the ModSpec may
 use this "module" structure in any manner consistent with the rest of this Policy.
 
-An OGC Standard or Abstract Specification may have mandatory and optional requirements classes.  This allows the options
+A standard may have mandatory and optional requirements classes.  This allows the options
 in the testing procedure to be grouped into non-varying mandatory and optional conformance classes.
 Each requirement within an optional requirements class is mandatory when that requirements class is
 implemented. When needed, a particular requirements class may contain only a single
@@ -115,20 +120,20 @@ passed to qualify to pass this conformance class. In terms of requirements, that
 that the dependent conformance class contains tests (by reference) for all
 requirements of the "included" conformance class.
 
-From this Policy's view of requirements classes, one requirements
+From this document's view of requirements classes, one requirements
 class is dependent on another if the other is included through such a reference. In
 this manner, requirements classes can be treated as sets of requirements (each in a
 single requirements class but included in others by reference to its "home"
 requirements class).
 
-In this Policy, each conformance requirement is separated in its own labeled
+In the ModSpec, each conformance requirement is separated in its own labeled
 paragraph, such as <<req-1>> above.
 
 The distribution of the information in a standard is not restricted. The only
 requirement will be that requirements be grouped in a manner
 consistent with the conformance test classes, see <<req-6>> and <<req-7>>. *#The
 informational and structural universals of the standard may be included in the
-core text and its associated models without violations of this Policy.#* This is
+core text and its associated models without violations of the ModSpec.#* This is
 true if the requirements of the extension are not implicit in what is
 included in the core.
 
@@ -149,7 +154,7 @@ requested operation is part of a non-supported extension.#*
 [[req-3]]
 [requirement,model=ogc,type="general"]
 ====
-#Requirements on the use and interpretation of vocabulary shall be in the
+#Requirements on the use and interpretation of vocabulary SHALL be in the
 requirements class where that use or interpretation is used.#
 ====
 
@@ -167,7 +172,7 @@ class in which the request-response pair is defined and set against requirements
 [[cls-6-2]]
 === Using the model
 
-The primary difficulty in speaking of standards (or candidate
+The primary difficulty in speaking about standards (or candidate
 standards){blank}footnote:[This is purposely written as "as not yet adopted"
 standards, since it is during the authoring process that this Policy must be
 considered, not _post facto_.] as a group is their diverse
@@ -196,7 +201,7 @@ standard into parts more than restricting their content.
 [[req-4]]
 [requirement,model=ogc,type="general"]
 ====
-#Each requirement in a conformant standard shall have a single standardization
+#Each requirement in a conformant standard SHALL have a single standardization
 target type.#
 ====
 
@@ -221,7 +226,7 @@ as intermediaries or indirect dependencies (see
 to but not including the identification of the standardization target type.#* This
 second statement will be in a separate requirements class, since it will have a
 separate standardization target and thus belong to the requirements to be tested by
-a separate conformance class. For example, in a service interface, a specification
+a separate conformance class. For example, in a service interface, a standard
 may be written that requires both the client and server to use a particular language
 for data transmission. Since the client and server are different standardization
 targets types (except in some special circumstances), they will have different
@@ -241,52 +246,31 @@ image::img01.png[]
 [example]
 .Abstract Superclass
 ====
-In <<fig-6-1>>, `"Web Application"` has been created as an abstract superclass of
-`"Web Server"` and `"Web Client."` In this manner, any common requirement for `"Web
-Server"` and `"Web Client"` can be laid against the abstract superclass `"Web
-Application"` and does not have to be repeated. Because the subclassing created a
-direct dependency from the packages containing `"Web Server"` or `"Web Client"` and
-that containing `"Web Application"` a corresponding direct dependency will exist at
-the conformance class level so that any requirement or compliance test defined for
-`"Web Application"` will also apply to directly to both `"Web Server"` and `"Web
-Client."` The conformance class of `"Web Application"` is tested whenever either
-`"Web Service"` or `"Web Client"` is tested see <<req-12>>.
 
-Using this technique may pose some problems at the concrete level because the
-semantics of the requirement may shift subtly between the `"Web Server"` and the
-`"Web Client."` If this happens, the original requirement statement at `"Web
-Application"` might be ambiguously stated (it has multiple semantically distinct
-interpretations depending on the subclass of `"Web Application"` to which it is
-applied). It would be appropriate in this case to move the requirement down from the
-abstract superclass, replicating it into each of the subclasses, where it can be
-stated more precisely.
-
-The conformance class of `"Web Application"` is tested whenever either `"Web
-Service"` or `"Web Client"` is tested, see <<req-12>>.
 ====
 
 [[cls-6-3]]
-=== The "standards" specification document
+=== The "standards" document
 
-Each specification is a set of requirements and their associated conformance tests.
+Each standard document is comprised of a set of requirements and their associated conformance tests.
 
 [[req-6]]
 [requirement,model=ogc,type="general"]
 ====
-#The requirements shall be grouped together in clauses (numbered sections) of the
-document in a strictly hierarchical manner, consistent with requirements modules and
+#Requirements SHALL be grouped together in clauses (numbered sections) of the
+document in a strictly hierarchical manner, consistent with 
 requirements classes.#
 ====
 
 [[req-7]]
 [requirement,model=ogc,type="general"]
 ====
-#The requirements structure of the document shall be in a logical correspondence to
+#The requirements structure of the document SHALL be in a logical correspondence to
 the test suite structure.#
 ====
 
-This structure is described in the following clause. Thus, if two requirements are
-in the same clause of the body of the document, they should be tested in the same
+This structure is described in the following clause. If two requirements are
+in the same requirments class, they should be tested in the same conformance
 class in the conformance suite. *#Each requirement may be separately identifiable
 either by a label as is done in this document, by its subclause number, or by its
 subclause number and full text.#*
@@ -302,38 +286,16 @@ test suite classes.
 Since these clauses, conformance classes, packages and schemas represent the most
 important divisions of the test suite and thus of the requirements classes, their
 name should be included in the table of contents (TOC) of the standard document, and
-should all be at the same level of heading. For example, in a UML organized
-standard, where packages are used for test classes in the test suite, the following
-may be a reasonable clause subdivision for a version of "ISO 19107: Spatial Schema."
-
-* Topic at heading level 1, such as Geometry, Topology.
-* Subdivision of related requirements classes at level 2, such as coordinate
-systems, points, curves, surfaces and solids at level 2.
-* Test Suite subdivisions at level 3, such as linear interpolations, conics, Bézier
-splines, NURBS, etc.
-* Classes at level 4, and so forth.
-
-In this case, at least level 3 headings should be in the table of contents. Level 4
-and beyond are optional in the TOC.
+should all be at the same level of heading.
 
 In summary, the structure of the requirements and requirements classes of the model
 should be reflected in the organization of the conformance tests and classes, and
 also in the structure of the normative clauses in the specification document.
 
-[NOTE]
-====
-This makes it more difficult to write a standard, but is expected to make the
-standard easier to read and understand. This trade-off is usually worth it, since
-the readers of a specification should be orders of magnitude more numerous than its
-contributing authors.
-
-Making it easier to implement a specification is an important goal of this standard.
-====
-
 [[cls-6-4]]
 === Conformance Test Suite
 
-The requirements here will be applied directly to the test suite, and in particular
+The requirements specified in this clause will be applied directly to the test suite, and in particular
 to the conformance classes. By definition, a "test suite" is a collection of
 identifiable conformance classes. A conformance class is a well-defined set of
 conformance tests. Each conformance test is a concrete or abstract (depending on the
@@ -368,16 +330,13 @@ Strict parallelism of implementation and governance is the essence of this stand
 [[req-9]]
 [requirement,model=ogc,type="general"]
 ====
-#A Conformance class shall not contain any optional conformance tests.#
+#A Conformance class SHALL not contain any optional conformance tests.#
 ====
 
-It is reasonable to assume that two standardization targets that have the same
-certificates of conformance could be considered to be functionally equivalent. This
-is not always the case since many standards have "optional" requirements that are
-tested or not as selected by the implementors of the target. This requirement stops
+This requirement stops
 conformance classes from containing optional requirements and tests, and, at least
-as far as the specification is concerned, makes all certificates of conformance mean
-that exactly the same tests have been conducted. Specification may use
+as far as the standard is concerned, makes all certificates of conformance mean
+that exactly the same tests have been conducted. Standards documents may use
 recommendations for such options, but the conformance test classes do not test
 recommendations.
 
@@ -397,7 +356,7 @@ the values of such parameters are very important.
 [[req-10]]
 [requirement,model=ogc,type="general"]
 ====
-#A certificate of conformance shall specify all parameter values used to pass the
+#A certificate of conformance SHALL specify all parameter values used to pass the
 tests in its conformance test class.#
 ====
 
@@ -406,7 +365,7 @@ Conformance to a particular conformance class means exactly the same thing every
 [[req-11]]
 [requirement,model=ogc,type="general"]
 ====
-#A Conformance class shall explicitly test only requirements from a single
+#A Conformance class SHALL explicitly test only requirements from a single
 requirements class.#
 ====
 
@@ -418,7 +377,7 @@ but this is a result of an explicit requirement in the "home" requirements class
 [[req-12]]
 [requirement,model=ogc,type="general"]
 ====
-#A Conformance class shall specify any other conformance class upon which it is
+#A Conformance class SHALL specify any other conformance class upon which it is
 dependent and that other conformance class shall be used to test the specified
 dependency.#
 ====
@@ -433,7 +392,7 @@ conformance class of another standard.
 If a service specifies that a particular output is required to be conformant to a
 conformance test class in a specific standard (say a normatively referenced XML
 schema), then the conformance class of that normative reference will be used to test
-that output. For example, if a WFS specifies that its feature collection output is
+that output. For example, if an OGC Web Feature Service (WFS) implementation instance specifies that its feature collection output is
 compliant to a particular profile of GML, then that profile of GML will be used to
 validate that output. This means that the service is indirectly tested using the GML
 standard. In other words, GML is an indirect dependency of the original service.
@@ -444,11 +403,11 @@ every implementation that passed a particular conformance class satisfies exactl
 the same requirements and passes exactly the same conformance tests. Differences
 between implementations will be determined by which conformance test classes are
 passed, not by listing of which options within a class were tested. If a
-specification's authors wish to make a particular requirement optional, <<req-9>>
+standard's authors wish to make a particular requirement optional, <<req-9>>
 forces them to include it in a separate requirements class (and therefore in a
 separate conformance test class) which can be left untested.
 
-Other standards do not follow a strict parallelism between requirement specification
+NOTE: Standards developed outside the OGC may not follow a strict parallelism between requirement specification
 and testing, so for use within a specification compliant to this standard, special
 care must be taken in importing conformance test classes from other standards.
 
@@ -457,21 +416,21 @@ care must be taken in importing conformance test classes from other standards.
 ====
 #If a requirements class is imported from another standard for use within a
 specification conformant to this standard, and if any imported requirement is
-"optional," then that requirement shall be factored out as a separate requirements
+"optional," then that requirement SHALL be factored out as a separate requirements
 class in the profile of that imported standard used in the conformant specification.
-Each such used requirements class shall be a conformance class of the source
+Each such used requirements class SHALL be a conformance class of the source
 standard or a combination of conformance classes of the source standard or standards.#
 ====
 
-The tracking of the parallelism between requirements and test should be easy if the
-specification is non-ambiguous. To insure this, the following requirement places a
-default mapping between the two, by utilizing the names of the two types of classes.
+The tracking of the parallelism between requirements and tests should be easy if the
+standards document is non-ambiguous. To insure this, by utilizing the names of the two types of classes the following requirement places a
+default mapping between the two.
 
 [[req-14]]
 [requirement,model=ogc,type="general"]
 ====
 #For the sake of consistency and readability, all requirements classes and all
-conformance test classes shall be explicitly named, with corresponding requirements
+conformance test classes SHALL be explicitly named, with corresponding requirements
 classes and conformance test classes having similar names.#
 ====
 
@@ -480,17 +439,10 @@ classes and conformance test classes having similar names.#
 Logically, a requirements class (set of requirements) and a conformance class (set
 of tests) are not comparable. This can be remedied by noting that both have a
 consistent relation to a set of requirements. A requirements class is a set of
-requirements. A conformance class tests a set of requirements. Therefore we could
-say that a requirements class corresponds precisely to a conformance class if they
+requirements. A conformance class tests a set of requirements. Therefore a requirements class corresponds precisely to a conformance class if they
 both are related (as described) to the same set of requirements.
 
-A particular standard will be simpler the fewer requirements classes it contains.
-The Einstein criteria of "as simple as possible but no simpler" applies. Another way
-to say this is that a requirements class should require a reasonable amount of work
-to achieve. If the requirements class (given all its dependencies have been passed)
-requires little, then it probably should be merged with another related requirements
-class, most likely one of its dependencies or a "sibling" requirements class with
-similar dependencies, purpose and semantics.
+
 ====
 
 [[cls-6-5-2]]
@@ -499,7 +451,7 @@ similar dependencies, purpose and semantics.
 [[req-15]]
 [requirement,model=ogc,type="general"]
 ====
-#Each requirement in the standard shall be contained in one and only one
+#Each requirement in the standard SHALL be contained in one and only one
 requirements class. Inclusion of any requirement in a requirements class by a
 conformance class shall imply inclusion of all requirements in its class (as a
 dependency).#
@@ -513,7 +465,7 @@ parallel the structure of the conformance classes in the conformance clause.#*
 [NOTE]
 ====
 This in conjunction with <<req-9>> means that all requirements in a conformant
-specification will be tested in some conformance class. In the best example, a
+standard will be tested in some conformance class. In the best example, a
 requirement should be contained explicitly in one and only one requirements class
 and tested in one and only one conformance class. This is not really a requirement
 here, since a single requirement can be stated twice in different requirements
@@ -523,7 +475,7 @@ classes.
 [[req-16]]
 [requirement,model=ogc,type="general"]
 ====
-#If any two requirements or two requirements modules are co-dependent (each
+#If any two requirements are co-dependent (each
 dependent on the other) then they shall be in the same requirements class. If any
 two requirements classes are co-dependent, they shall be merged into a single class.#
 ====
@@ -536,7 +488,7 @@ whenever possible.#*
 [[req-17]]
 [requirement,model=ogc,type="general"]
 ====
-#There shall be a natural structure on the requirements classes so that each may be
+#There SHALL be a natural structure on the requirements classes so that each may be
 implemented on top of any implementations of its dependencies and independent of its
 extensions.#
 ====
@@ -559,7 +511,7 @@ a "plug'n'play" fashion.
 [[req-18]]
 [requirement,model=ogc,type="general"]
 ====
-#No requirements class shall redefine the requirements of its dependencies, unless
+#No requirements class SHALL redefine the requirements of its dependencies, unless
 that redefinition is for an entity derived from but not contained in those
 dependencies.#
 ====
@@ -568,7 +520,7 @@ This means, for example, that a UML classifier cannot be redefined in a new
 extension. If a new version of the classifier is needed it has to be a valid subtype
 of the original.
 
-In terms of generalization; subclassing, extension and restriction (into a new class
+In terms of generalization, subclassing, extension and restriction (into a new class
 or type) are all acceptable, redefinition (of an old class or type) is not.
 
 [NOTE]
@@ -584,7 +536,7 @@ leads to conformance tests. Examples are therefore non-normative, by definition.
 [[cls-6-5-3]]
 ==== Profiles are defined as sets of conformance classes
 
-All the conformance classes created in a specification form a base (an upper bound
+All the conformance classes created in a standard form a base (an upper bound
 of all conformance classes) for defining profiles as defined in ISO/IEC 10000 (see
 <<iso-dp2>>). The base for creating a profile can be defined as the union of all
 requirements classes.
@@ -592,12 +544,12 @@ requirements classes.
 [[req-19]]
 [requirement,model=ogc,type="general"]
 ====
-#The conformance tests for a profile of a specification shall be defined as the
+#The conformance tests for a profile of a standard SHALL be defined as the
 union of a list of conformance classes that are to be satisfied by that profile's
 standardization targets.#
 ====
 
-NOTE: This means that a standard conformant to this standard predefines all of its
+NOTE: This means that a standard conformant to the ModSpec predefines all of its
 possible profiles through the dependencies between the conformance classes. In
 essence, a profile of a conformant standard is precisely a transitive closure of a
 subset of requirements classes under the dependency relations. If a standard has "n"
@@ -611,27 +563,27 @@ more than "2^n^" profiles. Dependencies will usually decrease these numbers radi
 [[req-20]]
 [requirement,model=ogc,type="general"]
 ====
-#Every specification shall define and identify a core set of requirements as a
+#Every specification SHALL define and identify a core set of requirements as a
 separate conformance class.#
 ====
 
 [[req-21]]
 [requirement,model=ogc,type="general"]
 ====
-#All general recommendations shall be in the core.#
+#All general recommendations SHALL be in the core.#
 ====
 
 [[req-22]]
 [requirement,model=ogc,type="general"]
 ====
-#Every other requirements class in a specification shall have a standardization
+#Every other requirements class in a standard shall SHALL a standardization
 target type which is a subtype of that of the core and shall have the core as a
 direct dependency.#
 ====
 
 *#This core may be partially or totally abstract. The core should be as simple as
 possible. The core requirements class may be a conformance class in another
-standard, in which case the current specification should identify any optional tests
+standard, in which case the current standard should identify any optional tests
 in that conformance class that are required by the current standard's core
 requirements class.#* See <<req-13>>.
 
@@ -651,47 +603,47 @@ Features."
 ==== Extensions are requirements classes
 
 A common mechanism to extend the functionality of a specification is to define
-extensions, which may be either local or encompass other standards. *#Specifications
-should use extensions where feasible, but should never hinder them.#*
+extensions, which may be either local or encompass other standards. *#Standards
+should use extensions as required and feasible, but should never hinder them.#*
 
 [[req-23]]
 [requirement,model=ogc,type="general"]
 ====
-#Each specification conformant to this standard shall consist of the core and some
+#Each standard conformant to the ModSpec SHALL consist of the core and some
 number of requirements classes defined as extensions to that core.#
 ====
 
 [[req-24]]
 [requirement,model=ogc,type="general"]
 ====
-#A specification conformant to this standard shall require all conformant extensions
+#A standard conformant to the ModSpec SHALL require all conformant extensions
 to itself to be conformant to this standard.#
 ====
 
 Since software is evolutionary at its best, it would not be wise to restrict that
-evolutionary tendency in a specification, by restricting extension specifications. A
-good specification will thus list the things a standardization target has to do, but
+evolutionary tendency in a standard, by restricting the specification of extensions. A
+good standrd will thus list the things a standardization target has to do, but
 will never list things that a standardization target might want to do above and
 beyond the current design requirements.
 
 [[req-25]]
 [requirement,model=ogc,type="general"]
 ====
-#A specification conformant to this standard shall never restrict in any manner
-future, logically-valid extensions of its standardization targets.#
+#A standard conformant to the ModSpec SHALL never restrict in any manner
+future, logically valid extensions of its standardization targets.#
 ====
 
 *#The above requirement should not be interpreted as a restriction on quality
-control.#* Any efforts by a specification to enforce a level of quality on its
+control.#* Any efforts by a standard to enforce a level of quality on its
 standardization targets, when well and properly formed, do not interfere with the
-proper extension of those targets. So, the specification may require its
+proper extension of those targets. So, the standard may require its
 standardization targets to behave in a certain manner when presented with a logical
 inconsistency, but that inconsistency must be fundamental to the internal logic of
-the model, and not a possible extension. Thus, a specification may require a
+the model, and not a possible extension. Thus, a standard may require a
 standardization target to accept GML as a feature specification language, but cannot
 require a standardization target to not accept an alternative, such as KML, or
 GeoJSON, as long at that alternative can carry viable information consistent with
-the fundamental intent of the specification.
+the fundamental intent of the standard.
 
 [[cls-6-5-6]]
 ==== Optional requirements are organized as requirements classes
@@ -699,8 +651,7 @@ the fundamental intent of the specification.
 [[req-26]]
 [requirement,model=ogc,type="general"]
 ====
-#The only optional requirements acceptable in a specification conformant to this
-standard shall be expressible as a list of conformance classes to be passed.#
+#The only optional requirements acceptable in a standard conformant with the ModSpec SHALL be expressible as a list of conformance classes to be passed.#
 ====
 
 NOTE: Standards and implementations are restricted by this, but not instances of
@@ -718,7 +669,7 @@ are considered to be options and should be in a separate requirements class.#*
 [[req-27]]
 [requirement,model=ogc,type="general"]
 ====
-#The common portion of any two requirements classes shall consist only of references
+#The common portion of any two requirements classes SHALL consist only of references
 to other requirements classes.#
 ====
 
