--- a/sources/sections/ab-changes-required.adoc
+++ b/sources/sections/ab-changes-required.adoc
@@ -1,12 +1,12 @@
 [[annex-B]]
 [appendix,obligation=normative]
-== Changes required in the OGC Standards
+== OGC Only: Changes required in the OGC Standards
 
-NOTE: For OGC Standards only: No chnages are required to existing OGC Standards
+NOTE: For OGC Standards only: No changes are required to existing OGC Standards
 
 === New standards and revisions to exissting standards
 
-Any new standard, specification, or major revision of an existing standard shall
+Any new standard, specification, or major revision of an existing standard SHALL
 comply with the ModSpec in the structure of its internal models and its
 conformance tests.
 
