--- a/sources/sections/00-preface.adoc
+++ b/sources/sections/00-preface.adoc
@@ -5,7 +5,7 @@ This OGC member developed and approved document defines a model and related requ
 
 The goal is to ensure that a standard specifies requirements in a common and consistent manner and that these requirements are testable.
 
-NOTE: For OGC only: Any new OGC Standard, abstract specification, or major revision of an existing OGC Standard shall comply with the requirements stated in this document.
+NOTE: For OGC only: Any new OGC Standard, abstract specification that contains requirements, or major revision of an existing OGC Standard shall comply with the requirements stated in this document.
 
 NOTE: Historically, this document has been known and abbreviated as the "ModSpec". For continuity and ease of understanding this document may also be refered to as the "OGC ModSpec".
 
@@ -34,13 +34,24 @@ The following OGC Members participated in editing this document:
 |===
 
 [.preface]
-== Acknowledgements
+== Contributors
 
-The following OGC Members contributed and particpated in developing the original version of this Policy document.
+The following OGC Members contributed and particpated in developing Version 2 of the ModSpec.
 
 [%unnumbered]
 |===
 ^h| Person ^h| Organization Represented
+| Simon Cox | CSIRO and OGC Fellow
+| Chuck Heazel |
+| Clemens Portele | interactive instruments GmbH
+| Jeff Yutzler | ImageMatters
+|===
+
+[.preface]
+== Acknowledgements
+
+The following OGC Members were key contributors to Version 1 of the ModSpec
+
 | Simon Cox | CSIRO
 | David Danko | ESRI
 | James Greenwood | SeiCorp, Inc.
