--- a/sources/document.adoc
+++ b/sources/document.adoc
@@ -1,18 +1,18 @@
-= The Specification Model -- A Standard for Modular specifications
+= The ModSpec -- A Standard for writing Modular Standards
 :doctype: standard
 :docsubtype: conceptual-model
-:status: published
-:committee: technical
+:status: Draft
+:committee: OGC Architecture Board
 :docnumber: 08-131r3
-:edition: 1.0.0
-:received-date: 2009-10-19
-:issued-date: 2009-10-19
-:published-date: 2009-10-19
-:copyright-year: 2009
-:fullname: Policy SWG
+:edition: 1.1.0
+:received-date: 2024-xx-xx
+:issued-date: 2024-xx-xx
+:published-date: 2024-xx-xx
+:copyright-year: 2024
+:fullname: OGC Architecture Board
 :role: editor
 :language: en
-:submitting-organizations: CSIRO; ESRI; SeiCorp, Inc.; Oracle USA; University of the Bundeswehr - ITS; US National Geospatial-Intelligence Agency (NGA); interactive instruments GmbH; US Department of Homeland Security (DHS); Bentley Systems, Inc.; BAE Systems - C3I Systems
+:submitting-organizations: TBD
 :imagesdir: images
 :mn-document-class: ogc
 :mn-output-extensions: xml,html,doc,pdf,rxl
